--- a/Task-2/package.json
+++ b/Task-2/package.json
@@ -21,6 +21,7 @@
     "react-duallist": "^1.1.6",
     "react-file-base64": "^1.0.3",
     "react-fontawesome": "^1.7.1",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
